--- a/.gitignore
+++ b/.gitignore
@@ -1,36 +1,28 @@
-*.py[cod]
+# Python bytecode:
+*.py[co]
 
-# C extensions
-*.so
+# Packaging files:
+*.egg*
 
-# Packages
-*.egg
-*.egg-info
-dist
-build
-eggs
-parts
-bin
-var
-sdist
-develop-eggs
-.installed.cfg
-lib
-lib64
-__pycache__
+# Editor temp files:
+*.swp
+*~
 
-# Installer logs
-pip-log.txt
+# Build dirs
+/docs/build
+/build/*
 
-# Unit test / coverage reports
+# SQLite3 database files:
+*.db
+
+# Logs:
+*.log
+
+# Others:
 .coverage
-.tox
-nosetests.xml
+.idea
+.vagrant
+.tags
 
-# Translations
-*.mo
-
-# Mr Developer
-.mr.developer.cfg
-.project
-.pydevproject
+# This project
+/public/assets/*
