--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,10 @@
 [nosetests]
 nocapture=1
-cover-package=dropthings
+cover-package=webfolder
 with-coverage=1
 cover-erase=1
 where=tests
 
 [aliases]
-dev = develop easy_install dropthings[testing]
-docs = develop easy_install dropthings[docs]
+dev = develop easy_install webfolder[testing]
+docs = develop easy_install webfolder[docs]
