--- a/debian/control
+++ b/debian/control
@@ -14,6 +14,6 @@ Vcs-Browser: https://github.com/aert/aert-webfolder
 
 Package: aert-webfolder
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, ${python:Depends}
+Depends: ${misc:Depends}, ${python:Depends}
 Description: Online storage for links notes and files.
  See homepage for more information.
