--- a/deploy/Vagrantfile
+++ b/deploy/Vagrantfile
@@ -12,7 +12,7 @@ Vagrant.configure("2") do |config|
   config.vm.network :forwarded_port, guest: 80, host: 8080, auto_correct: true
   config.vm.network :forwarded_port, guest: 5432, host: 5432
 
-  #config.vm.synced_folder "../data", "/vagrant_data"
+  config.vm.synced_folder "../", "/home/vagrant/PROJECT"
 
   # Customize the box
   config.vm.provider :virtualbox do |v|
