--- a/etc/config_release.ini
+++ b/etc/config_release.ini
@@ -1,6 +1,10 @@
 [main]
 DEVELOP = false
 ALLOWED_HOSTS = 127.0.0.1
+STATIC_ROOT = /opt/aert/www-webfolder/assets
+STATIC_URL = http://127.0.0.1/static/
+MEDIA_ROOT = /opt/aert/www-webfolder/uploads
+MEDIA_URL = http://127.0.0.1/media/
 
 [database]
 DATABASE_USER = bla
