--- a/etc/uwsgi/vassals/webfolder.ini
+++ b/etc/uwsgi/vassals/webfolder.ini
@@ -8,3 +8,4 @@ module = webfolder.webui.wsgi
 #pythonpath = /path/to/django/application
 logto = /opt/aert/webfolder/log/uwsgi.log
 #logfile-chown = your_user # You may not need this, based on your setup
+env = AERT_WEBFOLDER_CONFIG=/opt/aert/webfolder/etc/config_release.ini
