--- a/deploy/installer/Makefile
+++ b/deploy/installer/Makefile
@@ -32,12 +32,12 @@ configure_copy_files:
 	mkdir -p $(DEST_PATH)/assets
 	mkdir -p $(DEST_PATH)/uploads
 	mkdir -p $(DEST_PATH)/logs
-	cp -R etc/ $(DEST_PATH)/etc
+	cp -R etc/ $(DEST_PATH)/
 	@if [ -e $(LINK_BKP_PATH)/etc/config.ini ] ; then cp -f $(LINK_BKP_PATH)/etc/config.ini $(DEST_PATH)/etc/config.ini; fi;
 
 test:
 	sudo apt-get install nginx
-	sudo $(DEST_PATH)/etc/start_gunicorn.sh
-	sudo cp -f etc/uwsgi/nginx-site-example.conf /etc/nginx/sites-available/webfolder-test.app
+	sudo $(DEST_PATH)/etc/nginx/start_gunicorn.sh
+	sudo cp -f etc/nginx/nginx-site-example.conf /etc/nginx/sites-available/webfolder-test.app
 	sudo ln -s /etc/nginx/sites-available/webfolder-test.app /etc/nginx/sites-enabled/webfolder-test.app
 	sudo service nginx reload
