Trying new install.

--- a/deploy/installer/Makefile
+++ b/deploy/installer/Makefile
@@ -1,8 +1,9 @@
 
 PROJECT_NAME=aert-webfolder
-PROJECT_VERSION=0.1.0
+PROJECT_VERSION:=$(shell cat ../../RELEASE-VERSION)
+PROJECT_FILENAME=$(PROJECT_NAME)_$(PROJECT_VERSION)
 
-DEST_PATH=/opt/aert/webfolder_$(PROJECT_VERSION)
+DEST_PATH=$(PROJECT_FILENAME)
 VENV_PATH=$(DEST_PATH)/env
 LINK_PATH=/opt/aert/webfolder
 LINK_BKP_PATH=/opt/aert/webfolder.prev
