Trying new install.

--- a/deploy/installer/Makefile
+++ b/deploy/installer/Makefile
@@ -1,6 +1,6 @@
 
 PROJECT_NAME=aert-webfolder
-PROJECT_VERSION=0.1.0.post2
+PROJECT_VERSION=__VERSION__
 PROJECT_FILENAME=$(PROJECT_NAME)_$(PROJECT_VERSION)
 
 DEST_PATH=/opt/aert/webfolder_$(PROJECT_VERSION)
