--- a/deploy/Vagrantfile
+++ b/deploy/Vagrantfile
@@ -19,5 +19,10 @@ Vagrant.configure("2") do |config|
     v.customize ["modifyvm", :id, "--memory", 512]
   end
 
+  config.vm.provision "ansible" do |ansible|
+    ansible.playbook = "ansible/playbook.yml"
+    #ansible.inventory_path = "ansible/inventory.ini"
+  end
+
 end
 
