--- a/deploy/Vagrantfile
+++ b/deploy/Vagrantfile
@@ -4,11 +4,12 @@
 Vagrant.configure("2") do |config|
   # Debian Wheezy
   config.vm.box = "wheezy64"
-  config.vm.box_url = "https://dl.dropboxusercontent.com/s/xymcvez85i29lym/vagrant-debian-wheezy64.box"
+  #config.vm.box_url = "https://dl.dropboxusercontent.com/s/xymcvez85i29lym/vagrant-debian-wheezy64.box"
+  config.vm.box_url = "http://downloads.shadoware.org/wheezy64.box"
 
   # Network
-  config.vm.network :private_network, ip: "192.168.111.222"
-  config.vm.hostname = "vagrant.webfolder.org"
+  config.vm.network :private_network, ip: "192.168.111.223"
+  config.vm.hostname = "webfolder.devaert.org"
   config.vm.network :forwarded_port, guest: 80, host: 8080, auto_correct: true
   config.vm.network :forwarded_port, guest: 5432, host: 5432
 
@@ -21,7 +22,7 @@ Vagrant.configure("2") do |config|
 
   config.vm.provision "ansible" do |ansible|
     ansible.playbook = "ansible/playbook.yml"
-    #ansible.inventory_path = "ansible/inventory.ini"
+    ansible.inventory_path = "ansible/inventory.ini"
   end
 
 end
