--- a/deploy/ansible/roles/common/tasks/main.yml
+++ b/deploy/ansible/roles/common/tasks/main.yml
@@ -1,10 +1,10 @@
 ---
-# Defines tasks applicable across all machines in the infrastructure.
 
 - name: Install base pkgs
-  apt: pkg=$item state=installed
+  apt: pkg=$item state=installed update_cache=yes
   with_items:
+    - bash
     - vim
-    - git
+    - python
+  tags: common
 
-- include: security.yml tags=security
