--- a/deploy/ansible/roles/web-app/handlers/main.yml
+++ b/deploy/ansible/roles/web-app/handlers/main.yml
@@ -1,9 +1,9 @@
 ---
 
 - name: restart nginx
-  command: /etc/init.d/nginx restart
-
-- name: restart uwsgi
   service: name=nginx state=restarted
-  service: name=uwsgi state=restarted
+
+#- name: restart uwsgi
+#  service: name=nginx state=restarted
+#  service: name=uwsgi state=restarted
 
