--- a/deploy/ansible/roles/web-app/tasks/app_webfolder.yml
+++ b/deploy/ansible/roles/web-app/tasks/app_webfolder.yml
@@ -7,6 +7,7 @@
   with_items:
     - python-virtualenv
     - python-pip
+  tags: app
 
 
 # Create VirtualEnv
@@ -19,11 +20,11 @@
 
 # Get Git sources
 
-- name: /srv/www/apps
-  file: path=/srv/www/apps state=directory owner=www-data group=www-data
-
-- name: app_webfolder_git
-  git: repo=https://github.com/aert/aert-webfolder.git dest=/srv/www/apps/aert-webfolder.git update=yes force=yes
+#- name: /srv/www/apps
+#  file: path=/srv/www/apps state=directory owner=www-data group=www-data
+#
+#- name: app_webfolder_git
+#  git: repo=https://github.com/aert/aert-webfolder.git dest=/srv/www/apps/aert-webfolder.git update=yes force=yes
 
 # Migrate db
 
@@ -31,10 +32,10 @@
 
 # Configure gunicorn
 
-- name: app_webfolder_gunicorn-config
-  template: src=uwsgi.ini.j2 dest=/etc/uwsgi/apps-available/webfolder.ini
-  notify:
-    - restart uwsgi
+#- name: app_webfolder_gunicorn-launcher
+#  template: src=start_gunicorn.sh.j2 dest=/etc/uwsgi/apps-available/webfolder.ini
+#  notify:
+#    - restart uwsgi
 
-- name: app_webfolder_uwsgi-enable
-  file: src=/etc/uwsgi/apps-available/webfolder.ini dest=/etc/uwsgi/apps-enabled/webfolder.ini state=link
+#- name: app_webfolder_uwsgi-enable
+#  file: src=/etc/uwsgi/apps-available/webfolder.ini dest=/etc/uwsgi/apps-enabled/webfolder.ini state=link
