--- a/deploy/ansible/roles/web-app/tasks/main.yml
+++ b/deploy/ansible/roles/web-app/tasks/main.yml
@@ -4,33 +4,32 @@
 - name: nginx-apt
   apt: pkg=$item state=installed
   with_items:
-    - bash
     - nginx
+  tags: nginx
 
 # Directories & files
 
 - name: nginx-user
   user: name=www-data state=present home=/srv/www
 
-- name: nginx-rm-default:
+- name: nginx-rm-default
   file: path=/etc/nginx/sites-enabled/default state=absent
 
-- name: /srv/www
+- name: nginx-/srv/www
   file: path=/srv/www state=directory owner=www-data group=www-data
         
-- name: /etc/nginx/sites-available
+- name: nginx-/etc/nginx/sites-available
   file: path=/etc/nginx/sites-available state=directory owner=root mode=0755
 
-- name: /etc/nginx/sites-enabled
+- name: nginx-/etc/nginx/sites-enabled
   file: path=/etc/nginx/sites-enabled state=directory owner=root mode=0755
 
 # Configure
 
-- name: nginx-config
-  copy: src=nginx.conf /etc/nginx/nginx.conf
-  notify:
-    - restart nginx
+#- name: nginx-config
+#  copy: src=nginx.conf /etc/nginx/nginx.conf
+#  notify:
+#    - restart nginx
  
 
-- include: uwsgi.yml tags=uwsgi
 - include: app_webfolder.yml tags=app
