--- a/deploy/Vagrantfile
+++ b/deploy/Vagrantfile
@@ -1,6 +1,10 @@
 # -*- mode: ruby; -*-
 # vi: set ft=ruby :
 
+# Installer local path <without> extension
+INSTALLER_VERSION = IO.read("../RELEASE-VERSION").rstrip
+INSTALLER_PATH = File.join(File.dirname(__FILE__), "..", "build", "setup_aert-webfolder_" + INSTALLER_VERSION)
+
 Vagrant.configure("2") do |config|
   # Debian Wheezy
   config.vm.box = "wheezy64"
@@ -15,14 +19,16 @@ Vagrant.configure("2") do |config|
 
   config.vm.synced_folder "../", "/home/vagrant/PROJECT"
 
-  # Customize the box
-  config.vm.provider :virtualbox do |v|
-    v.customize ["modifyvm", :id, "--memory", 512]
-  end
-
+  # Provision
   config.vm.provision "ansible" do |ansible|
     ansible.playbook = "ansible/playbook.yml"
     ansible.inventory_path = "ansible/inventory.ini"
+    ansible.extra_vars = { installer_local: INSTALLER_PATH, }
+  end
+
+  # Customize the box
+  config.vm.provider :virtualbox do |v|
+    v.customize ["modifyvm", :id, "--memory", 512, "--name", "aert-webfolder"]
   end
 
 end
