--- a/deploy/installer/Makefile
+++ b/deploy/installer/Makefile
@@ -5,7 +5,6 @@ PROJECT_VERSION=__VERSION__
 NEW_VERSION_PATH=$(PREFIX)/webfolder_$(PROJECT_VERSION)
 NEW_VENV_PATH=$(NEW_VERSION_PATH)/env
 LINK_PATH=$(PREFIX)/webfolder
-LINK_BKP_PATH=$(PREFIX)/webfolder.prev
 
 
 install: install_deps install_env install_wheel install_links post-install
@@ -22,8 +21,8 @@ install_wheel:
 	$(NEW_VENV_PATH)/bin/pip install --use-wheel --no-index --find-links=wheel-dir/ -r requirements.txt
 
 install_links:
-	if [ -f $(LINK_BKP_PATH) ] ; then rm -f $(LINK_BKP_PATH); fi;
-	if [ -f $(LINK_PATH) ] ; then mv $(LINK_PATH) $(LINK_BKP_PATH); fi;
+	if [ -L $(LINK_BKP_PATH) ] ; then rm -f $(LINK_BKP_PATH); fi;
+	if [ -L $(LINK_PATH) ] ; then rm -f $(LINK_PATH); fi;
 	ln -s $(NEW_VERSION_PATH) $(LINK_PATH)
 
 post-install: 
