--- a/webfolder/etc/config_release.ini
+++ b/webfolder/etc/config_release.ini
@@ -1,8 +1,8 @@
 [main]
 DEVELOP = false
 ALLOWED_HOSTS = 127.0.0.1
-STATIC_ROOT = /opt/aert/www-webfolder/assets
-STATIC_URL = http://127.0.0.1/static/
+STATIC_ROOT = 'staticfiles'
+STATIC_URL = '/static/'
 MEDIA_ROOT = /opt/aert/www-webfolder/uploads
 MEDIA_URL = http://127.0.0.1/media/
 
