--- a/deploy/ansible/playbook.yml
+++ b/deploy/ansible/playbook.yml
@@ -5,16 +5,9 @@
   gather_facts: False
   sudo: True
   vars:
-    prefix      : /opt/aert
-    app_home    : "${prefix}/webfolder"
-    app_env     : "${app_home}/env"
-    app_assets  : "${app_home}/assets"
-    app_uploads : "${app_home}/uploads"
-    app_log     : "${app_home}/log"
-    tmp_path    : "${prefix}/tmp"
-    installer_dirname : "{{ installer_local | basename }}"
-    installer_tgz : "{{ installer_local | mandatory }}.tgz"
+    #installer_local : 
   roles:
     - common
-    - web-app
+    - nginx
+    - app
 
